stderr
JudgeMan.java:13: error: ';' expected
        int counter = 0
                       ^
1 error
